# cpl

./: .gitignore  .travis.yml  CHANGELOG.markdown  CHANGELOG.md  CLAUDE.md  COPYING  CPL.cabal  NEWS  README  README.markdown  README.md  Setup.hs  TUTORIAL.md  TUTORIAL_ja.md  WASM_IMPLEMENTATION.md  appveyor.yml  build_bdist_linux.sh  stack.yaml  wasi-stdio-investigation-issue-en.md  wasi-stdio-investigation-issue.md
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: build.yaml  wasm-deploy.yaml
doc-images/: Makefile  coproduct.tex  exponential.tex  inflist.tex  list.tex  natural-numbers.tex  product.tex  terminal-object.tex
haste/: index.html
misc/: build_zip.hs
samples/: ack.cpl  ack_3_4.cpl  automata.cdt  benchmark.cpl  ccc.cdt  examples.cpl  examples.txt  function.cpl  misc.cdt  obscure.cdt  rec.cdt
scripts/: build-tutorial.sh  build-wasm.sh  build_bdist.hs  generate-favicons.sh  generate-samples-js.sh
src/: AExp.hs  CDT.hs  CDT.hs-boot  CDTParser.hs  CPLSystem.hs  Exp.hs  ExpParser.hs  FE.hs  Funct.hs  Main.hs  ParserUtils.hs  Simp.hs  Statement.hs  Subst.hs  Type.hs  Typing.hs  Variance.hs
wasm/: QUICKSTART.md  README.md  cpl-terminal.js  index.html  tutorial.css  tutorial_ja_header.txt
web/: README.md  cpl-terminal.js  favicon_header.html  index.html  manifest.json  tutorial_header.txt
windows/: COPYING.rtf  CPL.wxs  build_msi.hs  build_zip.hs
